--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,18 @@ yarn-error.log*
 *.njsproj
 *.sln
 *.sw?
+// .gitnignore
+# next.js build output
+.next
+
+# dotenv environment variables file (build for Zeit Now)
+.env
+.env.build
+
+# Dependency directories
+node_modules/
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
