--- a/package.json
+++ b/package.json
@@ -17,8 +17,15 @@
   "devDependencies": {
     "@types/node": "^16.10.2",
     "@types/react": "^17.0.27",
+    "@vanilla-extract/babel-plugin": "^1.1.1",
+    "@vanilla-extract/css": "^1.6.1",
+    "@vanilla-extract/webpack-plugin": "^2.1.0",
+    "css-loader": "^6.4.0",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
-    "typescript": "^4.4.3"
+    "mini-css-extract-plugin": "^2.4.2",
+    "typescript": "^4.4.3",
+    "webpack": "^5.58.1",
+    "webpack-merge": "^5.8.0"
   }
 }
