--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
     "date-fns": "^2.24.0",
     "next": "11.1.2",
     "react": "17.0.2",
